# CADToVectorGraphics

./: .gitignore  README.md  pyproject.toml  requirements.txt
compose/: compose.py
compose/components/: bind.py  illuminate.py  view.py
compose/components/representation/: cad.py  mesh.py
illustrate/: illustrate.py
illustrate/components/: style.py  svg.py
render/: render.py
render/components/: geometry.py  project.py
src/cadvectorgraphics/: __init__.py
src/cadvectorgraphics/compose/: compose.py
src/cadvectorgraphics/compose/components/: bind.py  illuminate.py  view.py
src/cadvectorgraphics/compose/components/representation/: cad.py  material.py  mesh.py
src/cadvectorgraphics/illustrate/: illustrate.py
src/cadvectorgraphics/illustrate/components/: style.py  svg.py
src/cadvectorgraphics/render/: render.py
src/cadvectorgraphics/render/components/: geometry.py  project.py
src/cadvectorgraphics/util/: color.py  geometry.py
util/: color.py  geometry.py
