[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cadvectorgraphics"
version = "1.0.4"
dynamic = ["dependencies"]
authors = [
  { name="Dennis Schulz", email="dennisschulz2000@gmail.com" },
]
description = "A python package for generating beautiful SVG from CAD data"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
Repository  = "https://github.com/sxhulzenstein/CADToVectorGraphics"